added some functionality and playing around in VS2022

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,17 @@ project(MPC_PID_simulator)
 
 set(CMAKE_CXX_STANDARD 23)
 
-add_executable(MPC_PID_simulator main.cpp simulation.cpp thermal_system.cpp pid_controller.cpp mpc_controller.cpp hybrid_controller.cpp)
+add_executable(MPC_PID_simulator
+	main.cpp
+	simulation.cpp
+	PIDController.cpp
+	MPCController.cpp
+	HybridController.cpp
+	ThermalSystem.cpp
+	Simulation.cpp
+	"IController.h"
+	"PIDController.h"
+	"PIDController.cpp"
+	"MPCController.h"
+	"MPCController.cpp"
+)
